--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 :root {
   /* Primary */
   --Dark-cyan: hsl(185, 75%, 39%);
-  --Very-dark-desaturated-blue: hsl(229, 23%, 23%);
+  --Very-dark-desaturated-blue: hsla(229, 23%, 23%, 0.9);
   --Dark-grayish-blue: hsl(227, 10%, 46%);
 
   /* Neutral */
@@ -74,12 +74,12 @@ hr {
 }
 
 h3 {
-  text-align: center;
-  font-weight: 700;
-  font-size: 18px;
-  font-weight: 700;
+  color: var(--Very-dark-desaturated-blue);
   padding-top: 15px;
   padding-bottom: 8px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 h3 > span {
@@ -108,7 +108,7 @@ p {
   width: 100%;
   max-width: 400px;
   background-image: url(./images/bg-pattern-card.svg);
-  min-height: 140px;
+  min-height: 145px;
   border-radius: 16px 16px 0 0;
 }
 
@@ -174,6 +174,19 @@ p {
     width: 100%;
     max-width: 350px;
     height: 375px;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+      rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  }
+  .card:hover {
+    transform: scale(1.03);
+    transition: all 0.2s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+  }
+  .profile-3d-background:hover {
+    transition: all 0.5s ease-in-out;
+    transform: scale3d(1.3, 1.3, 1.3);
+    transform: perspective(123px);
   }
 }
 
